@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - rpm.org: Use rpmSigTag enum for signature tags everywhere, more or less..
     - jbj: import a modified copy of testHTML.c from libxml2.
     - rpm.org: make gendiff sort the file list, so comparing the results is easier.
     - jbj: rpmio: test programs link only -lrpmio -lrpmmisc.
